# psql

./: .cursorrules  .env.example  .gitignore  README.md  bug_fixes_and_improvements.md  main.py  pg_implementation_plan.md  pyproject.toml
psql/: __init__.py  pg.py
tests/: test_query.py  test_schema_functionality.py
